# rustracer

./: .gitignore  Cargo.toml  Readme.md  example-90s.scene  example-checkerboard.scene  example-cylinder.scene  example-disc.scene  example.scene  lambert-example.scene  lambert-sphere.scene  unshaded-sphere.scene
cg_basics/: Cargo.toml
cg_basics/src/: camera.rs  lib.rs  light.rs  material.rs  scene_graph.rs
cg_basics/src/camera/: fisheye_camera.rs  orthographic_camera.rs  perspective_camera.rs  pinhole_camera.rs  spherical_camera.rs
colors/: Cargo.toml  LICENSE
colors/src/: gray.rs  lib.rs  rgb.rs  rgba.rs  ycbcr.rs
diffuseraytracer/: Cargo.toml  example-90s.scene  example-checkerboard.scene  example-cylinder.scene  example-disc.scene  example.scene  feh_573740_000001_out.ff  out-no-ambient-occlusion.ff
diffuseraytracer/src/: camera.rs  diffuse_ray_tracer.rs  lib.rs  light.rs  main.rs  material.rs  parser.rs  ray_casting.rs
diffuseraytracer/src/camera/: fisheye_camera.rs  orthographic_camera.rs  perspective_camera.rs  pinhole_camera.rs  spherical_camera.rs
diffuseraytracer/src/parser/: camera.rs  geometry.rs  light.rs  material.rs  misc.rs  texture.rs
image/: Cargo.toml
image/src/: analyzer.rs  converter.rs  farbfeld.rs  generator.rs  (+3 more)
math/: Cargo.toml
random/: Cargo.toml
sampling/: Cargo.toml
src/: camera.rs  classic_raytracer.rs  color.rs  diffuse_ray_tracer.rs  image.rs  lib.rs  light.rs  main.rs  material.rs  math.rs  parser.rs  random.rs  ray_casting.rs  sampling.rs  scene_graph.rs  traits.rs  transform.rs  units.rs
units/: Cargo.toml
(+98 files in other folders)
